@@ -1,3 +1,10 @@
+2008-12-24  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* logview-log.c (log_load):
+	* logview-log.h:
+	Set a meaningful error message if we can't read from the log file
+	(#349756).
+
 2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* logview-window.c: handle keypad shortcuts (#441564).
